[gd_scene load_steps=4 format=2]

[ext_resource path="res://rsc/user_managment/user_managment.gd" type="Script" id=1]
[ext_resource path="res://rsc/exit/exit.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.47451, 0.454902, 1 )

[node name="user_managment" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll_container" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -250.0
margin_right = 257.0
margin_bottom = 250.0
custom_styles/bg = SubResource( 1 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_container" type="VBoxContainer" parent="scroll_container"]
margin_right = 514.0
size_flags_horizontal = 3
custom_constants/separation = 70

[node name="exit" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
